# nice_auto_clicker

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT.md  JOURNAL.md  README.md  run.sh
scripts/: build.py  setup.py
src/: main.c  main.cpp
